Projeto Final/codigos/config/k8s/manifest_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jogodavida-deployment
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jogodavida
  template:
    metadata:
      labels:
        app: jogodavida
    spec:
      containers:
      - name: jogodavida-container-mpi
        image: registry.digitalocean.com/pspd/mpi:1.0.0
      - name: jogodavida-container-spark
        image: registry.digitalocean.com/pspd/spark:1.0.0
