Projeto Final/codigos/config/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus-grafana-kibana
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: internal-ingress-host # Altere 'internal-ingress-host' para o host que deseja usar internamente.
    http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
      - path: /kibana
        pathType: Prefix
        backend:
          service:
            name: quickstart-kb-http
            port:
              number: 5601
